Remove prompt area, move icons into toolbar This is the initial implementation of this, which involves css to hide the prompt area, css and js to provide space for and update the toolbar with the appropriate cell icon. Creates new hook getIcon to replace renderIcon, since rendering is driven by celltoobar rebuilding and not cell loading. Still more alignment issuesto sort out, and all cells need their layout adjusted (but this had to be done at some point anyway.)

--- a/kbase-extension/static/custom/custom.css
+++ b/kbase-extension/static/custom/custom.css
@@ -318,3 +318,7 @@ span#notebook_name:hover {
 p {
     margin-bottom: 9px;
 }
+
+.prompt {
+    display: none !important;
+}
